# my-workspace-manager

./: Cargo.toml  LICENSE  README.md  config.toml.example
.github/workflows/: ci.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: main.rs
crates/core/src/infra/: mod.rs
crates/core/src/presentations/: cli.rs
crates/core/src/roles/: devcontainer.rs  tracker.rs
crates/core/tests/contract/: main.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/server/src/infra/: exec.rs  settings.rs
crates/server/src/presentations/: cli.rs  mod.rs
crates/server/src/roles/: devcontainer.rs  repostore.rs  session.rs  tracker.rs  worktree.rs
crates/server/src/usecases/: mod.rs
crates/server/tests/contract/: harness.rs  main.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/shared/src/domains/: mod.rs
crates/tracker-github/: Cargo.toml
crates/tracker-github-api/: Cargo.toml
crates/tracker-github-api/src/: main.rs
crates/tracker-github-api/tests/: contract.rs
crates/tracker-github/src/: main.rs
crates/tracker-github/tests/: contract.rs
crates/wsm-core/: Cargo.toml
crates/wsm-core/src/: commands.rs  domain.rs  exec.rs  main.rs  settings.rs
crates/wsm-core/src/roles/: devcontainer.rs  mod.rs  repostore.rs  session.rs  tracker.rs  worktree.rs
crates/wsm-core/tests/contract/: harness.rs  main.rs
docs/: wsm.md
examples/: wsm-tracker-demo
