# 公式 GitHub Tracker プラグイン (gh CLI)。wsm-server とはプラグイン契約
# (docs/wsm.md「Tracker プラグイン契約」) だけで結合し、独立に更新できる。
# wsm-shared には依存しない: 契約の JSON が唯一の境界で、id の検証は
# 信頼境界として server 側の責務。
[package]
name = "wsm-tracker-github"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
serde_json = "1"

[dev-dependencies]
serde_json = "1"
tempfile = "3"
